added functionality to display success and errors to the user using react toast

--- a/src/app/css/article.module.css
+++ b/src/app/css/article.module.css
@@ -1,5 +1,5 @@
 .articleContainer {
-    border: 2px solid blue;
+    border: 2px solid #0080FF;
     padding: 20px;
     margin: 20px auto;
     max-width: 100px;
