--- a/src/app/styles/article.module.css
+++ b/src/app/styles/article.module.css
@@ -1,5 +1,5 @@
 .articleContainer {
-    border: 2px solid #0080FF;
+    border: 2px solid #c2b8b8;
     padding: 20px;
     margin: 20px auto;
     max-width: 100px;
