modified card to view data

--- a/src/app/styles/article.module.css
+++ b/src/app/styles/article.module.css
@@ -4,6 +4,12 @@
     margin: 20px auto;
 
   }
+
+  @media (max-width: 576px) {
+  .cardSubtitle {
+    margin-top: -30%;
+  }
+}
   
   @media (max-width: 768px) {
     .articleContainer {
