--- a/src/app/styles/article.module.css
+++ b/src/app/styles/article.module.css
@@ -5,6 +5,27 @@
 
   }
 
+.articleContainer {
+  margin-bottom: 20px;
+}
+
+.card {
+
+  padding: 10px;
+}
+
+.imageContainer {
+
+  position: relative;
+  overflow: hidden;
+  height: 250px;
+}
+
+.imageContainer img {
+  width: 100%;
+  height: auto;
+}
+  
   @media (max-width: 576px) {
   .cardSubtitle {
     margin-top: -30%;
@@ -17,4 +38,11 @@
       margin: 10px auto;
       max-width: 90%;
     }
+
+    .card {
+      padding: 5px; /* Reduce padding on smaller screens */
+      margin: -5px; /* Reduce margin on smaller screens */
+    }
+  
+  
   }
